Modified according to Arun Sir

--- a/major_project_report/sec/abstract.tex
+++ b/major_project_report/sec/abstract.tex
@@ -7,6 +7,6 @@
 \addcontentsline{toc}{section}{ABSTRACT}
 Music is an integral part of our life. We listen to music everyday as per our taste and mood. With the advancement and increase in volume of digital content, the choice for people to listen to diverse type of music has also increased significantly. Thus, the necessity of delivering the most suited music to the listeners has been an interesting field of research in computer science. One of the important measures to deliver the best music to listeners could be his/her personality trait. In this project, we aim to discover the impact of personality traits on the collaborative filtering (user to user) which is one of the most popular recommendation engines used today.
 
-In order to determine the personality of a person, social media like Facebook can be a useful platform where people express their views on different matters, share their opinions and thoughts. Such expressions of thoughts and opinions can be leveraged to study the personality traits of the person and hence use this information to try to enhance existing user to user collaborative filtering techniques for music recommendation. Personality traits of the users can be studied in terms of standard Big Five Personality Traits defined as Openness to experience, Conscientiousness, Extraversion, Agreeableness, and Neuroticism.
+In order to determine the personality of a person, social media like Facebook can be a useful platform where people express their views on different matters, share their opinions and thoughts. Such expressions of thoughts and opinions can be leveraged to study the personality traits of the person and hence use this information to try to enhance existing user to user collaborative filtering techniques for music recommendation. Personality traits of the users can be studied in terms of standard Big Five Personality Traits defined as Openness to experience, Conscientiousness, Extraversion, Agreeableness, and Neuroticism \cite{fivefactormodel}.With this project, we were able to determine that personality of the user can be one of the crucial factor, in the recommendation of the music.
 
 {\em Keywords: Music Recommendation System, Collaborative filtering, Big Five Personality Traits, Openness, Conscientiousness, Extraversion, Agreeableness, Neuroticism}
