--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -49,7 +49,7 @@ The developed system, being huge and dynamic nature, may not be developed effici
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width = 5 cm]{fig/scrum-chart.jpg}
+\includegraphics[width = 10 cm]{fig/scrum.png}
 \caption{Scrum Software Development Cycle}
 \label{fig:scrum}
 \end{figure}
@@ -65,4 +65,4 @@ Hence scrum is adaptive, has small repeating cycles and there is short-term plan
 
 
 \subsection{Data Collection}
-In order to predict the personality, dataset for training the classification model was obtained from myPersonality website\cite{dataset}. It consisted of collections of status updates of 223 Facebook users along with their personality classification scores in terms of big five personality traits. For the recommendation system, survey was conducted among the 32 colleagues who gave ratings to predefined set of music in the database which consisted of 54 music at the time of survey. Their personality traits were determined with our personality classification model before they rated the music.
+In order to predict the personality, dataset for training the classification model was obtained from myPersonality website\cite{dataset}. It consisted of collections of status updates of Facebook users along with their personality classification scores in terms of big five personality traits. For the recommendation system, survey was conducted among the colleagues who gave ratings to predefined set of music in the database. Their personality traits were determined with our personality classification model before they rated the music.
