--- a/major_project_report/sec/references.tex
+++ b/major_project_report/sec/references.tex
@@ -4,7 +4,7 @@
 \addcontentsline{toc}{section}{REFERENCES}
 \begin{thebibliography}{9}
 	\bibitem{dataset}
-		myPersonality DataSet \url{ http://mypersonality.org/wiki/doku.php}
+		myPersonality DataSet. Retrieved January,2017 from \url{ http://mypersonality.org/wiki/doku.php}
 
  \bibitem{fivefactormodel}
 	 Five Factor Model of Personality: Goldberg LR, et al.(2006) \textit{The international personality item pool and the future of pulic-domain personality measures J Res Pers}, 40(1):8486.
@@ -33,29 +33,29 @@
  \bibitem{nunes}
 Nunes, M.A.S.N(2008). \textit{Recommender system based on personality traits}
 \bibitem{kd}
-	G. Parsa.(2015) Document Classification \url{http://www.kdnuggets.com/2015/01/text-analysis-101-document-classification.html}
+	G. Parsa.(2015) Document Classification. Retrieved July,2017 from \url{http://www.kdnuggets.com/2015/01/text-analysis-101-document-classification.html}
 \bibitem{stopwords}
-	Dropping common stop words \url{http://nlp.stanford.edu/IR- book/html/htmledition/dropping-common-terms-stop-words-t1.html}
+	Dropping common stop words. Retrieved March,2017 from \url{http://nlp.stanford.edu/IR- book/html/htmledition/dropping-common-terms-stop-words-t1.html}
 \bibitem{porter}
 	M.F. Porter. (2001). Stemming Algorithm \textit{Snowball: A Language for Stemming Algorithms}
 \bibitem{pos}
- Part of Speech Tagging.(2016). \url{http://en.wikipedia.org/wiki/Part-of-speech tagging}
+ Part of Speech Tagging.(2016). Retrieved March,2017 from \url{http://en.wikipedia.org/wiki/Part-of-speech tagging}
  \bibitem{vector}
-Textual data and vector space model. \url{http://www.calpoly.edu/~dsun09/lessons/textprocessing}
+Textual data and vector space model. Retrieved July,2017 from \url{http://www.calpoly.edu/~dsun09/lessons/textprocessing}
 
 \bibitem{naive}
-	Naive Bayes text classification. \url{https://nlp.stanford.edu/IR-book/html/htmledition/naive-bayes-text-classification-1.html}
+	Naive Bayes text classification. Retrieved July,2017 from \url{https://nlp.stanford.edu/IR-book/html/htmledition/naive-bayes-text-classification-1.html}
 
 \bibitem{additive}
-	Additive Smoothing. \url{https://en.wikipedia.org/wiki/Additive_smoothing}
+	Additive Smoothing. Retrieved July,2017 from \url{https://en.wikipedia.org/wiki/Additive_smoothing}
 
 \bibitem{cross}
-Cross Validation. \url{https://www.cs.cmu.edu/~schneide/tut5/node42.html}
+Cross Validation. Retrieved July,2017 from \url{https://www.cs.cmu.edu/~schneide/tut5/node42.html}
 \bibitem{analysis}
-Data Analysis. \url{https://www.ngdata.com/what-is-data-analysis}
+Data Analysis. Retrieved February,2017 from \url{https://www.ngdata.com/what-is-data-analysis}
 
 \bibitem{rdef}
- Recommnder System. \url{http://recommender-system.blogspot.com/2012_10_01_archive.html}
+ Recommender System. Retrieved June,2017 from \url{http://recommender-system.blogspot.com/2012_10_01_archive.html}
  \bibitem{demographic}
 	 Safoury, L., and Salah, A.(2013). Exploiting user demographiattributes for solving cold-start problem in recommender system.\textit{Lecture Notes on Software Engineering}, 1(3), 303
 \bibitem{recommend}
@@ -63,31 +63,31 @@ Data Analysis. \url{https://www.ngdata.com/what-is-data-analysis}
 \bibitem{rmain}
 	F.O. Isinkaye, Y.O. Folajimi and B.A. Ojokoh.(2015). Recommendation Systems: Principles, methods and evaluation \textit{Egyptian Informatics Journal}.
 \bibitem{latent}
-	Non-negative matrix factorization \url{https://www.slideshare.net/BenjaminBengfort/non-negative-matrix-factorization}
+	Non-negative matrix factorization. Retrieved July,2017 from \url{https://www.slideshare.net/BenjaminBengfort/non-negative-matrix-factorization}
 \bibitem{manning}
-Christopher Manning, Stanford NLP - Standford NLP Group. \url{https://nlp.standford.edu/manning}
+Christopher Manning, Stanford NLP - Standford NLP Group. Retrieved June,2017 from \url{https://nlp.standford.edu/manning}
 \bibitem{coursera}
-	Recommendation System, Coursera. \url{https://coursera.org/learn/machine-learning}
+	Recommendation System, Coursera. Retrieved July,2017 from \url{https://coursera.org/learn/machine-learning}
 \bibitem{traits}
-Studying the big five personality traits-UK Essays. \url{https://ukessays.com/essays/psychology/studying-the-big-five-personality-traits.php}
+Studying the big five personality traits-UK Essays. Retrieved January,2017 from \url{https://ukessays.com/essays/psychology/studying-the-big-five-personality-traits.php}
 
 \bibitem{eval}
 D. Alexander. (2009) Collaborative Fileringand Recommender Systems
 \bibitem{tfidf}
-TF-IDF. \url{http://www.tfidf.com/} 2015
+TF-IDF. Retrieved June,2017 from \url{http://www.tfidf.com/} 2015
 \bibitem{api}
-Facebook Graph API \url{https://developers.facebook.com/docs/graph-api}
+Facebook Graph API. Retrieved July,2017 from \url{https://developers.facebook.com/docs/graph-api}
   \bibitem{ng}
   Andrew Ng. (2016). Machine Learning [Video lectures].
-  Retrieved July, 2016 from \url{https://www.coursera.org/learn/machine-learning}.
+  Retrieved March, 2017 from \url{https://www.coursera.org/learn/machine-learning}.
 
   \bibitem{wikilog}
-  Logistic Regression. (n.d.). {\em In Wikipedia}. Retrieved July 23, 2016 from
+  Logistic Regression. (n.d.). {\em In Wikipedia}. Retrieved July, 2017 from
   \url{https://en.wikipedia.org/wiki/Logistic_regression}.
 
   \bibitem{jason}
-  Jason Brownlee. (2016). Logistic Regression for Machine Learning [Online tutorial].
-  Retrieved August 1, 2016 from
+  Jason Brownlee. (2017). Logistic Regression for Machine Learning [Online tutorial].
+  Retrieved August, 2017 from
   \url{http://machinelearningmastery.com/logistic-regression-for-machine-learning}.
 
 \end{thebibliography}
