modified according to external sir

--- a/major_project_report/sec/introduction.tex
+++ b/major_project_report/sec/introduction.tex
@@ -5,7 +5,7 @@ On the Internet, where the number of choices is overwhelming, there is need to f
 
 Besides, these days social networks have become widely used and popular mediums for information dissemination as well as the facilitators of social interactions. User contribution and activities provide a valuable insight into individual behavior, experiences, opinions and interests.Considering that personality, which uniquely identifies each one of us, affects a lot of aspects of human behavior, mental process and affective reactions, there is an enormous opportunities, for adding new personality based qualities in order to enhance the current collaborative filtering recommendation engine.
 
-Previous work has shown that the information in user's social media account is reflective of their actual personalities, not an idealized version of themselves which makes a broad user base social networking site Facebook, an ideal platform in order to study the personality traits of an user. Several well studied personality models have been proposed, among which the "Big Five Model" as known as "Five Factor Model"(FFM) is the most popular one (Goldberg 1992)\cite{fivefactormodel}.
+Previous work has shown that the information in user's social media account is reflective of their actual personalities, not an idealized version of themselves which makes a broad user base social networking site Facebook, an ideal platform in order to study the personality traits of an user. Several well studied personality models have been proposed, among which the "Big Five Model" as known as "Five Factor Model"(FFM) is the most popular one \cite{fivefactormodel}.
 
 \subsection{Background}
 The Big Five Model of personality dimensions has emerged as one of the most well-researched and well-regarded measures of personality structure in recent yeas \cite{fivefactormodel}. The model five domains of personality: Openness, Conscientiousness, Extroversion, Agreeableness and Neuroticism, were conceived by Tupes and Christal \cite{tupes} as the fundamental traits that emerged from analyses of previous personality tests. McCrae, Costa and John \cite{mccrae} continued five factor model research and consistently found generality across age, gender and cultural lines.
