--- a/major_project_report/sec/letter_of_approval.tex
+++ b/major_project_report/sec/letter_of_approval.tex
@@ -10,34 +10,30 @@
   PULCHOWK CAMPUS\\
   DEPARTMENT OF ELECTRONICS AND COMPUTER ENGINEERING\\
 \end{center}
-The undersigned certify that they have read, and recommended to the Institute of Engineering for acceptance, a project report entitled "Personality Based Music Recommendation System" submitted by Abhishek Paudel, Brihat Ratna Bajracharya, Miran Ghimire and Nabin Bhattarai in partial fulfillment of the requirements for the Bachelor's Degree in Computer Engineering.\\[1.1cm]
+The undersigned certify that they have read, and recommended to the Institute of Engineering for acceptance, a project report entitled \textbf{ "Personality Based Music Recommendation System"} submitted by \textbf{Abhishek Paudel, Brihat Ratna Bajracharya, Miran Ghimire and Nabin Bhattarai} in partial fulfillment of the requirements for the Bachelor's Degree in Computer Engineering.\\[1.1cm]
 
-\begin{minipage}{.60\textwidth}
+\begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-Supervisor, Mr. Daya Sagar Baral \\
-Lecturer\\
-Department of Electronics \& Computer Engineering\\[1.1cm]
+Supervisor, Mr. Daya Sagar Baral, Lecturer \\
+Department of Electronics and Computer Engineering\\ Institute of Engineering, Pulchowk Campus\\[1cm]
 \end{minipage}
 
-\begin{minipage}{.60\textwidth}
+\begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-Internal Examiner, Name
-Title\\
-Name of organization\\[1.1cm]
+Internal Examiner, Dr. Arun Kumar Timilsina, Deputy Director  \\
+CARD, Institute of Engineering, Pulchowk Campus\\[1.1cm]
 \end{minipage}
 
-\begin{minipage}{.60\textwidth}
+\begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-External Examiner, Name
-Title\\
-Name of organization\\[1.1cm]
+External Examiner, Mr. Mahesh Singh Kathayat, Associate Professor\\
+Kathmandu Engineering College\\[1.1cm]
 \end{minipage}
 
-\begin{minipage}{.60\textwidth}
+\begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-Coordinator, Name\\
-Title\\
-Name of coordinating committee\\[1cm]
+Coordinator, Mrs. Bibha Sthapit, Deputy Head\\
+Department of Electronics and Computer Engineering\\ Institute of Engineering Pulchowk Campus\\[1cm]
 \end{minipage}
 
 
