additional diagram integrated

--- a/major_project_report/sec/introduction.tex
+++ b/major_project_report/sec/introduction.tex
@@ -64,7 +64,7 @@ Music is an essential part of human life. Music is the pleasant sound that leads
 The most important scope of the project will be to discover if the personality traits of an individual can be used for the enhancement of the recommendation engine in order to provide the more personalized content to the user as a recommendation.
 
 \subsection{Understanding Of Requirement}
-Nowadays, digital data on the Internet has been massive than ever, which have created a potential challenge of information overload, hindering timely access of items of interest on the Internet. So, there is a requirement for the better recommendation system than ever. Thus with this project, we will try to find out if the recommendation engine can perform better if personality of the individual is used as one of the metrics for a recommendation. Nowadays, social networking sites have become vastly popular among several people of different religion, caste, ethnic groups and different location of the world, which shows how culturally diverse the people around the world is. And in this diversity, we can also see the varieties in the personalities of people living in different parts of the world. The main purpose of the social networking sites are to connect different peoples from different parts of the world which makes it the most suitable platform in order to study the personality traits of the user. Thus studied personality traits can be used in recommendation engine in order to improve it's efficiency and with it's project we aim to prove that indeed the personality can be used to do so.
+Nowadays, digital data on the Internet has been massive than ever, which have created a potential challenge of information overload, hindering timely access of items of interest on the Internet. So, there is a requirement for the better recommendation system than ever. Thus with this project, we will try to find out if the recommendation engine can perform better if personality of the individual is used as one of the metrics for a recommendation. Nowadays, social networking sites have become vastly popular among several people of different religion, caste, ethnic groups and different location of the world, which shows how culturally diverse the people around the world is. And in this diversity, we can also see the varieties in the personalities of people living in different parts of the world. The main purpose of the social networking sites are to connect different peoples from different parts of the world which makes it the most suitable platform in order to study the personality traits of the user. Thus studied personality traits might be used in recommendation engine in order to improve it's efficiency. %and with it's project we aim to prove that indeed the personality can be used to do so.
 
 \subsection{Organization of the Report}
 The organization of the report is done in the following ways:
