--- a/major_project_report/sec/result.tex
+++ b/major_project_report/sec/result.tex
@@ -204,6 +204,14 @@ The following table shows RMSE of various recommendation models:
     \caption{RMSE of Recommendation System Models}
   \end{table}
 
+\cleardoublepage
+The following figure depicts the  RMSE of various recommendation models:
+\begin{figure}[!ht]
+  \centering
+    \includegraphics[width=1\textwidth]{fig/rmse_all.png}
+    \caption{RMSE of various models used in the system}
+\end{figure}
+\\
 The following figures show effects of change in number of nearest neighborhood in the different collaborative filtering models.\\
 
 \begin{figure}[!ht]
