--- a/major_project_report/sec/system_design.tex
+++ b/major_project_report/sec/system_design.tex
@@ -70,7 +70,7 @@ The following figure depicts various recommendation models used within the syste
 \begin{figure}[!ht]
 \centering
 \includegraphics[width = 16 cm]{fig/recommendation_models.png}
-\caption{Taks performed with recommedation unit within the system}
+\caption{Recommedation models used within the system}
 \label{fig:project}
 \end{figure}
 \item Storage Unit/Database: It is responsible for storing of user data, music data, user-music-rating data and user-music-recommendation data made by the recommender system as well as providing recommendation based on user-feedbback. SQLite database is used as the storage unit for the project.
